--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: Proxima Nova, sans-serif;
+  }
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 400;
+  src: url("../public/font/ProximaNova-Regular-01.woff") format(woff);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 500;
+  src: url("../public/font/ProximaNova-Medium-07.woff") format(woff);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 600;
+  src: url("../public/font/ProximaNova-Semibold-11.woff") format(woff);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 700;
+  src: url("../public/font/ProximaNova-Bold-03.woff") format(woff);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 800;
+  src: url("../public/font/ProximaNova-Extrabld-05.woff") format(woff);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  font-weight: 900;
+  src: url("../public/font/proximanovablack.woff") format(woff);
+}
